# kintsugi

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  Singularity.def  environment.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: __init__.py  demo.py  reproduce_demo.ipynb  toy_data.py
kintsugi/: __init__.py  _demo.py  _poisson_log_var.py  aggregate.py  graph.py  models.py  partition.py  report.py  tensor.py  variogram.py
kintsugi/demo/: __init__.py  __main__.py
kintsugi/io/: __init__.py  anndata.py  grid.py  visium_hd.py
tests/: test_anndata.py  test_api.py  test_core.py  test_demo.py  test_io.py  test_report.py
