[project]
name = "kintsugi"
version = "0.1.0"
description = "Adaptive spatial tessellation for sub-cellular resolution transcriptomics"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Kintsugi authors" },
]
maintainers = [
    { name = "Kintsugi authors" },
]
requires-python = ">=3.10"
keywords = ["spatial transcriptomics", "visium hd", "segmentation", "tessellation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "h5py>=3.10",
    "pandas>=2.0",
    "pyarrow>=14.0",
]

[project.urls]
Homepage = "https://github.com/cafferychen777/kintsugi"
Repository = "https://github.com/cafferychen777/kintsugi"
Issues = "https://github.com/cafferychen777/kintsugi/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "twine>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
ignore-vcs = true
exclude = [
    "/.gitignore",
    "/data",
    "/dist",
    "/exp",
    "/figures",
    "/ms",
    "/scripts",
    "/**/__pycache__",
    "/**/*.pyc",
    "/**/.DS_Store",
    "/**/*.aux",
    "/**/*.bbl",
    "/**/*.blg",
    "/**/*.fdb_latexmk",
    "/**/*.fls",
    "/**/*.log",
    "/**/*.out",
    "/**/*.synctex.gz",
    "/**/*.toc",
    "/texput.log",
]

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/README.md",
    "/kintsugi",
    "/pyproject.toml",
    "/tests",
]
exclude = [
    "/.gitignore",
]
only-include = [
    "LICENSE",
    "README.md",
    "kintsugi",
    "pyproject.toml",
    "tests",
]

[tool.hatch.build.targets.wheel]
packages = ["kintsugi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
