[project]
name = "kintsugi-st"
version = "0.1.1"
description = "Adaptive spatial tessellation for sub-cellular resolution transcriptomics"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Kintsugi authors" },
]
maintainers = [
    { name = "Kintsugi authors" },
]
requires-python = ">=3.10"
keywords = ["spatial transcriptomics", "visium hd", "segmentation", "tessellation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "h5py>=3.10",
    "pandas>=2.0",
    "pyarrow>=14.0",
]

[project.urls]
Homepage = "https://github.com/cafferychen777/kintsugi"
Repository = "https://github.com/cafferychen777/kintsugi"
Issues = "https://github.com/cafferychen777/kintsugi/issues"
Documentation = "https://github.com/cafferychen777/kintsugi#readme"

[project.scripts]
kintsugi-demo = "kintsugi._demo:main"

[project.optional-dependencies]
anndata = [
    "anndata>=0.10",
]
dev = [
    "anndata>=0.10",
    "build>=1.2",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "twine>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
ignore-vcs = true
exclude = [
    "/.gitignore",
    "/data",
    "/dist",
    "/exp",
    "/figures",
    "/ms",
    "/scripts",
    "/slides",
    "/**/__pycache__",
    "/**/*.pyc",
    "/**/.DS_Store",
    "/**/*.aux",
    "/**/*.bbl",
    "/**/*.blg",
    "/**/*.fdb_latexmk",
    "/**/*.fls",
    "/**/*.log",
    "/**/*.out",
    "/**/*.synctex.gz",
    "/**/*.toc",
    "/texput.log",
]

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/README.md",
    "/kintsugi",
    "/pyproject.toml",
    "/tests",
    "/examples",
]
exclude = [
    "/.gitignore",
]
only-include = [
    "LICENSE",
    "README.md",
    "kintsugi",
    "pyproject.toml",
    "tests",
    "examples",
]

[tool.hatch.build.targets.wheel]
packages = ["kintsugi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
